tests/ui/consts/const-eval/stable-metric/ctfe-fn-call.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-fn-call.rs:28:5
   |
LL |     foo();
   |     ^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)
   |
note: inside `call_foo`
  --> $DIR/ctfe-fn-call.rs:28:5
   |
LL |     foo();
   |     ^^^^^
note: inside `X`
  --> $DIR/ctfe-fn-call.rs:32:16
   |
LL | const X: u32 = call_foo();
   |                ^^^^^^^^^^

note: erroneous constant used
  --> $DIR/ctfe-fn-call.rs:35:16
   |
LL |     println!("{X}");
   |                ^

note: erroneous constant used
  --> $DIR/ctfe-fn-call.rs:35:16
   |
LL |     println!("{X}");
   |                ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
  --> $DIR/ctfe-fn-call.rs:35:16
   |
LL |     println!("{X}");
   |                ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
